# dispatch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dispatch-design.md  dispatch-timer-spec.md
.github/workflows/: ci.yml  notify-parent.yml  release.yml
src/: mcp_client.rs  mcp_server.rs  nonce.rs  orchestrator.rs  reminder.rs  signal.rs  task.rs
