[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"
description = "Signal-driven task orchestrator for MCP servers"
license = "GPL-3.0-or-later"
repository = "https://github.com/YakupAtahanov/dispatch"
homepage = "https://github.com/YakupAtahanov/dispatch"
authors = ["Yakup Atahanov"]
keywords = ["mcp", "orchestrator", "llm", "async"]
categories = ["command-line-utilities", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
